OBA Api - add departures-for-location API method