@@ -21,20 +21,21 @@ import org.opentripplanner.api.ws.oba_rest_api.beans.TransitResponse;
 import org.opentripplanner.api.ws.oba_rest_api.beans.TransitResponseBuilder;
 import org.opentripplanner.api.ws.oba_rest_api.beans.TransitScheduleStopTime;
 import org.opentripplanner.api.ws.oba_rest_api.beans.TransitTrip;
-import org.opentripplanner.common.model.T2;
 import org.opentripplanner.routing.core.RoutingRequest;
 
 import javax.ws.rs.DefaultValue;
 import javax.ws.rs.Path;
 import javax.ws.rs.QueryParam;
 import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.Set;
 
 /**
  */
 @Path(OneBusAwayApiMethod.API_BASE_PATH + "arrivals-and-departures-for-stop" + OneBusAwayApiMethod.API_CONTENT_TYPE)
-public class ArrivalsAndDeparturesForStopOTPMethod extends OneBusAwayApiMethod<TransitEntryWithReferences<TransitArrivalsAndDepartures>> {
+public class ArrivalsAndDeparturesForStopOTPMethod extends AbstractArrivalsAndDeparturesOTPMethod<TransitEntryWithReferences<TransitArrivalsAndDepartures>> {
     
     @QueryParam("minutesBefore") @DefaultValue("2") private int minutesBefore;
     @QueryParam("minutesAfter") @DefaultValue("30") private int minutesAfter;
@@ -45,50 +46,47 @@ public class ArrivalsAndDeparturesForStopOTPMethod extends OneBusAwayApiMethod<T
     @Override
     protected TransitResponse<TransitEntryWithReferences<TransitArrivalsAndDepartures>> getResponse() {
 
-        if(stopIdStrings == null || stopIdStrings.isEmpty())
-            return TransitResponseBuilder.getFailResponse(TransitResponse.Status.NOT_FOUND, "Unknown stopId.");
+        boolean single;
+        List<Stop> stops;
 
-        if(time == null)
-            time = System.currentTimeMillis() / 1000;
-        
-        long startTime = time - minutesBefore * 60;
-        long endTime   = time + minutesAfter  * 60;
+        if(stopIdStrings != null && !stopIdStrings.isEmpty()) {
+            stops = new LinkedList<Stop>();
+            single = stopIdStrings.size() == 1;
+
+            for (String stopIdString : stopIdStrings) {
+                AgencyAndId stopId = parseAgencyAndId(stopIdString);
+                Stop stop = transitIndexService.getAllStops().get(stopId);
+                if (stop == null) {
+                    return TransitResponseBuilder.getFailResponse(TransitResponse.Status.NOT_FOUND, "Unknown stopId.");
+                } else {
+                    stops.add(stop);
+                }
+            }
+        } else {
+            return TransitResponseBuilder.getFailResponse(TransitResponse.Status.NOT_FOUND, "Unknown stopId.");
+        }
+
+        if(!initRequest()) {
+            return TransitResponseBuilder.getFailResponse(TransitResponse.Status.NO_TRANSIT_TIMES, "Date is outside the dateset's validity.",
+                    responseBuilder.entity(responseBuilder.getArrivalsAndDepartures(stops.get(0), null, null, null, null)));
+        }
+
+        List<TransitScheduleStopTime> stopTimes = new LinkedList<TransitScheduleStopTime>();
+        Set<TransitTrip> trips = new HashSet<TransitTrip>();
+        Set<String> nearbyStopIds = new HashSet<String>();
+        Set<String> alertIds = new HashSet<String>();
 
         RoutingRequest options = makeTraverseOptions(startTime, routerId);
 
-        Stop firstStop = null;
-        List<T2<TransitScheduleStopTime, TransitTrip>> stopTimesWithTrips = new ArrayList<T2<TransitScheduleStopTime, TransitTrip>>();
-        List<String> alertIds = new ArrayList<String>();
-        List<String> nearbyStopIds = new ArrayList<String>();
+        getResponse(stops, single, stopTimes, trips);
 
-        for(String stopIdString : stopIdStrings) {
-            AgencyAndId stopId = parseAgencyAndId(stopIdString);
-            Stop stop = transitIndexService.getAllStops().get(stopId);
-            if(stop == null)
-                return TransitResponseBuilder.getFailResponse(TransitResponse.Status.NOT_FOUND, "Unknown stopId.");
+        for(Stop stop : stops) {
+            if(single)
+                nearbyStopIds.addAll(getNearbyStops(stop));
 
-            if(firstStop == null) {
-                firstStop = stop;
-                if(!graph.transitFeedCovers(startTime) && graph.transitFeedCovers(endTime)) {
-                    return TransitResponseBuilder.getFailResponse(TransitResponse.Status.NO_TRANSIT_TIMES, "Date is outside the dateset's validity.",
-                            responseBuilder.entity(responseBuilder.getArrivalsAndDepartures(firstStop, null, null, null, null)));
-                }
-            }
-
-            stopTimesWithTrips.addAll(getStopTimesForStop(startTime, endTime, stopId, onlyDepartures, stopIdStrings.size() > 1));
-            alertIds.addAll(getAlertsForStop(stopId, options, startTime, endTime));
-            nearbyStopIds.addAll(getNearbyStops(stop));
+            alertIds.addAll(getAlertsForStop(stop.getId(), options, startTime, endTime));
         }
 
-        sortStopTimesWithTrips(stopTimesWithTrips);
-        
-        List<TransitScheduleStopTime> stopTimes = new LinkedList<TransitScheduleStopTime>();
-        List<TransitTrip> trips = new LinkedList<TransitTrip>();
-        for(T2<TransitScheduleStopTime, TransitTrip> stopTimeWithTrip : stopTimesWithTrips) {
-            stopTimes.add(stopTimeWithTrip.getFirst());
-            trips.add(stopTimeWithTrip.getSecond());
-        }
-
-        return responseBuilder.getResponseForStop(firstStop, stopTimes, alertIds, trips, nearbyStopIds);
+        return responseBuilder.getResponseForStop(stops.get(0), stopTimes, new ArrayList<String>(alertIds), new ArrayList<TransitTrip>(trips), new ArrayList<String>(nearbyStopIds));
     }
 }
